syntax = "proto3";

package proto;

service Storage {
   rpc Get (GetRequest) returns (GetResponse);
   rpc Set (SetRequest) returns (SetResponse);
   rpc Del (DelRequest) returns (DelResponse);
   rpc Exist (ExistRequest) returns (ExistResponse);
   rpc Count (CountRequest) returns (CountResponse);
   rpc List (ListRequest) returns (ListResponse);
   rpc LogGet (LogGetRequest) returns (LogGetResponse);
}

message GetRequest {
  string key = 1;
  string subKey = 2;
  string uniqueId = 3;
}

message GetResponse {
  int64 ok = 1;
  bytes data = 2;
}

message DelRequest {
  string key = 1;
  string subKey = 2;
}

message DelResponse {
  int64 ok = 1;
  bytes data = 2;
}

message SetRequest {
  int64 expire = 1;
  string key = 2;
  string subKey = 3;
  bytes data = 4;
}

message SetResponse {
  int64 ok = 1;
  bytes data = 2;
}

message CountRequest {
  string key = 1;
}

message CountResponse {
  int64 ok  = 1;
  bytes data = 2;
}

message ExistRequest {
  string key = 2;
  string subKey = 3;
}

message ExistResponse {
  int64 ok = 1;
  bytes data = 2;
}

//节点从其他节点同步数据
message ListRequest {
  string key = 1; //
  string subKey = 2; //
}

message ListResponse {
  int64 term = 1;      //主节点的任期,若小于
  bytes data = 2;      //拉取日志内容
  string  Msg = 2;
}

message ReceiveMvRequest {
  bytes data = 1;
}

message ReceiveMvResponse {
  int64  Code = 1;
  string  Msg = 2;
}
